Update favicon in index.html, enhance homepage styles with smooth scrolling and custom scrollbar, and fix WhatsApp link in ContactPage

--- a/src/assets/styles/homepage.css
+++ b/src/assets/styles/homepage.css
@@ -95,7 +95,7 @@
 @media (min-width: 701px) {
 
     main {
-        margin: 2%;
+        margin: 0 1% 1% 1%;
         flex-grow: 1;
         display: flex;
         justify-content: center;
@@ -104,6 +104,20 @@
         border-radius: 15px;
         box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
         backdrop-filter: blur(10px);
+        overflow-y: auto;
+        scroll-behavior: smooth;
+        scrollbar-width: thin;
+        scrollbar-color: transparent transparent;
+    }
+    
+    main::-webkit-scrollbar-thumb {
+        background-color: transparent;
+        border-radius: 50px;
+    }
+    
+    main::-webkit-scrollbar-track {
+        background-color: transparent;
+        border-radius: 50px;
     }
       
     main .text {
